WIP new trench detection works, fixed out of bounds errors (had to do with idx_min/idx_max not being set correctly according to rho_min/rho_max). Also improved resolution of periodogram by increasing FFT size, obviating the need for upsampling the signal. Still running into issues with the reliability of angle finding for short trenches.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
@@ -687,9 +687,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tp, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
-    "    frame_rot\n",
-    ")"
+    "a = np.arange(0, 3, 0.2)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(0.3 <= a)[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.where(0.5 > a)[0][-1]  # [-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tp, diag, _ = diagnostics.wrap_diagnostics(\n",
+    "    trench_detection.hough.find_trenches, ignore_exceptions=False\n",
+    ")(frame_rot)"
    ]
   },
   {
@@ -707,7 +735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = get_in(\"label_1.find_trench_lines.hough_2.profile\".split(\".\"), diag)"
+    "tp.loc[IDX[2], :][(\"info\", \"hough_value\")]  # > 0"
    ]
   },
   {
@@ -716,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhos, profile = a.Curve.I.data.values.T"
+    "a = get_in(\"label_2.find_trench_lines.hough_2.trimmed_profile\".split(\".\"), diag)"
    ]
   },
   {
@@ -725,7 +753,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "point_rhos, point_heights = a.Scatter.I.data.values.T"
+    "rhos, profile = a.data.values.T"
    ]
   },
   {
@@ -734,7 +762,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "point_idxs = np.where(point_rhos == rhos[:, np.newaxis])[0]"
+    "plt.plot(profile)"
    ]
   },
   {
@@ -743,7 +771,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(rhos[point_idxs] - point_rhos).sum()"
+    "f, Pxx = scipy.signal.periodogram(profile, scaling=\"spectrum\")"
    ]
   },
   {
@@ -752,7 +780,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(profile[point_idxs] - point_heights).sum()"
+    "hv.Curve(Pxx)"
    ]
   },
   {
@@ -761,7 +789,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window = 5"
+    "func = scipy.interpolate.interp1d(range(len(profile)), profile, kind=\"cubic\")"
    ]
   },
   {
@@ -770,15 +798,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(\n",
-    "    np.array(\n",
-    "        [\n",
-    "            profile[point_idxs[i] - window : point_idxs[i] + window]\n",
-    "            for i in range(point_idxs.shape[0])\n",
-    "        ]\n",
-    "    ).argmax(axis=1)\n",
-    "    - window\n",
+    "xs = np.linspace(0, len(profile) - 1, len(profile) * 200)\n",
+    "profile2 = func(xs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(profile2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f2, Pxx2 = scipy.signal.periodogram(\n",
+    "    profile, 1, window=\"hann\", nfft=1024 * 16, scaling=\"spectrum\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(Pxx2) * hv.Curve(scipy.ndimage.filters.gaussian_filter1d(Pxx2, 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(scipy.ndimage.filters.gaussian_filter1d(Pxx2, 20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = np.abs(np.fft.fft(profile2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zz = np.fft.fftfreq(len(profile2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(Pxx2) * hv.Curve(Pxx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve((xs, profile2)) * hv.Curve(profile)"
    ]
   },
   {
