Cleanup. New trench detection seems to half reduced bad_pitch by almost a half.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180719 Trench segmentation.ipynb
@@ -43,6 +43,7 @@
     "from traitlets import All\n",
     "import cachetools\n",
     "from collections import namedtuple, defaultdict\n",
+    "from collections.abc import Mapping, Sequence\n",
     "import skimage.morphology\n",
     "import scipy\n",
     "from glob import glob\n",
@@ -122,11 +123,11 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"01:00:00\",\n",
+    "    walltime=\"00:30:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"16GB\",\n",
+    "    memory=\"8GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    cores=1,\n",
     "    processes=1,\n",
@@ -212,12 +213,11 @@
    "outputs": [],
    "source": [
     "def do_reload():\n",
-    "    import trench_segmentation.watershed\n",
+    "    from importlib import reload\n",
+    "    import util, trench_detection, diagnostics, workflow, image\n",
     "\n",
-    "    # from importlib import reload\n",
-    "    # import util, trench_detection, diagnostics, workflow, image\n",
     "    # reload(util)\n",
-    "    # reload(trench_detection)\n",
+    "    reload(trench_detection.hough)\n",
     "    # reload(diagnostics)\n",
     "    # reload(workflow)\n",
     "    # reload(image)\n",
@@ -256,6 +256,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Debugging corrupted ND2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blah = {\n",
+    "    idx: client.submit(workflow.get_nd2_frame, **idx._asdict())\n",
+    "    for idx, row in util.iter_index(frames_to_process)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.cancel(blah)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_nd2_frame(**util.get_one(bad)._asdict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad = [k for k, v in blah.items() if v.status == \"error\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "progress(blah)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Run trench finding"
    ]
   },
@@ -283,34 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import distributed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ac = distributed.as_completed(trench_info_futures.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "client.cancel(trench_info_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections.abc import Mapping, Sequence"
    ]
   },
   {
@@ -340,46 +368,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = []\n",
+    "trench_info = {}\n",
     "for key, fut, res in as_completed(trench_info_futures):\n",
-    "    d.append((key, res))\n",
+    "    trench_info[key] = res\n",
     "    client.cancel(fut)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ac.next_batch()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_info = []"
    ]
   },
   {
@@ -397,18 +389,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.cancel(trench_info_futures)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "trench_info = util.apply_map_futures(\n",
-    "    client.gather, trench_info_futures, predicate=lambda x: x.status == \"finished\"\n",
+    "    client.gather, trench_info_futures, predicate=lambda x: x.status == \"error\"\n",
     ")"
    ]
   },
@@ -503,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bad_pitch = (trench_diag[\"find_trench_lines.hough_2.pitch\"] - 24).abs() > 1\n",
+    "bad_pitch = (trench_diag[\"find_trench_lines.hough_2.peak_func.pitch\"] - 24).abs() > 1\n",
     "bad_pitch.sum()"
    ]
   },
@@ -550,19 +533,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_points_good_t0 = util.get_one(trench_points_good.groupby(\"t\"))[1]\n",
-    "# trench_points_good_t0.index = trench_points_good_t0.index.droplevel('t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "trench_bbox_futures = []\n",
-    "for _, trenches in trench_points_good_t0.groupby([\"filename\", \"position\"]):\n",
+    "for _, trenches in trench_points_good.groupby([\"filename\", \"position\", \"t\"]):\n",
     "    trench_bbox_futures.append(\n",
     "        client.submit(workflow.get_trench_bboxes, trenches, image_limits)\n",
     "    )"
@@ -579,7 +552,7 @@
     "    client.gather, trench_bbox_futures, predicate=lambda x: x.status == \"finished\"\n",
     ")\n",
     "trench_bboxes = pd.concat(\n",
-    "    [trench_points_good_t0, pd.concat(trench_bbox_results, axis=0)], axis=1\n",
+    "    [trench_points_good, pd.concat(trench_bbox_results, axis=0)], axis=1\n",
     ")"
    ]
   },
@@ -600,6 +573,16 @@
    "outputs": [],
    "source": [
     "%store -r trench_bboxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_bboxes_t0 = util.get_one(trench_bboxes.groupby(\"t\"))[1]\n",
+    "# trench_bboxes_t0.index = trench_points_good_t0.index.droplevel('t')"
    ]
   },
   {
@@ -677,44 +660,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# frame_rot = skimage.transform.rotate(frame, 32)\n",
-    "frame_rot = skimage.transform.rotate(frame, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.arange(0, 3, 0.2)\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(0.3 <= a)[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.where(0.5 > a)[0][-1]  # [-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "tp, diag, _ = diagnostics.wrap_diagnostics(\n",
     "    trench_detection.hough.find_trenches, ignore_exceptions=False\n",
     ")(frame_rot)"
@@ -730,175 +675,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tp.loc[IDX[2], :][(\"info\", \"hough_value\")]  # > 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = get_in(\"label_2.find_trench_lines.hough_2.trimmed_profile\".split(\".\"), diag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rhos, profile = a.data.values.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(profile)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f, Pxx = scipy.signal.periodogram(profile, scaling=\"spectrum\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(Pxx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "func = scipy.interpolate.interp1d(range(len(profile)), profile, kind=\"cubic\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xs = np.linspace(0, len(profile) - 1, len(profile) * 200)\n",
-    "profile2 = func(xs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(profile2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f2, Pxx2 = scipy.signal.periodogram(\n",
-    "    profile, 1, window=\"hann\", nfft=1024 * 16, scaling=\"spectrum\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(Pxx2) * hv.Curve(scipy.ndimage.filters.gaussian_filter1d(Pxx2, 10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(scipy.ndimage.filters.gaussian_filter1d(Pxx2, 20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = np.abs(np.fft.fft(profile2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "zz = np.fft.fftfreq(len(profile2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(Pxx2) * hv.Curve(Pxx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve((xs, profile2)) * hv.Curve(profile)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Segmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_bboxes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_bboxes[(\"info\", \"hough_value\")].plot.hist(bins=100)"
    ]
   },
   {
