diagnostics.wrap_diagnostics_stack to make debugging trench segmentaion easy.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180720 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180720 Trench segmentation.ipynb
@@ -1161,12 +1161,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "segs, seg_diags, seg_errs = zip(\n",
-    "    *[\n",
-    "        diagnostics.wrap_diagnostics(trench_segmentation.watershed.segment_trench)(img)\n",
-    "        for img in util.get_one(_frame_stacks)\n",
-    "    ]\n",
+    "segment_trench_diag = diagnostics.wrap_diagnostics_stack(\n",
+    "    trench_segmentation.watershed.segment_trench\n",
     ")"
    ]
   },
@@ -1176,7 +1172,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_stack(seg_diags, (\"img\", \"watershed_labels\"))"
+    "%%time\n",
+    "segs, seg_diags, seg_errs = segment_trench_diag(util.get_one(_frame_stacks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_stack(seg_diags)"
    ]
   },
   {
