--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180720 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180720 Trench segmentation.ipynb
@@ -44,6 +44,7 @@
     "import cachetools\n",
     "from collections import namedtuple, defaultdict\n",
     "from collections.abc import Mapping, Sequence\n",
+    "from numbers import Number\n",
     "import skimage.morphology\n",
     "import scipy\n",
     "from glob import glob\n",
@@ -1045,13 +1046,280 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_regionprops(seg_stack, reporter_stack):\n",
-    "    import skimage.measure\n",
+    "a = dict(zip(range(10), range(10, 20)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(zip(*list(a.items())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEFAULT_REGIONPROPS = [\n",
+    "    \"area\",\n",
+    "    \"centroid\",\n",
+    "    \"eccentricity\",\n",
+    "    \"min_intensity\",\n",
+    "    \"mean_intensity\",\n",
+    "    \"max_intensity\",\n",
+    "    \"major_axis_length\",\n",
+    "    \"minor_axis_length\",\n",
+    "    \"orientation\",\n",
+    "    \"perimeter\",\n",
+    "    \"solidity\",\n",
+    "    \"weighted_centroid\",\n",
+    "]\n",
     "\n",
-    "    results = []\n",
-    "    for i in range(seg_stack.shape[0]):\n",
-    "        results.append(skimage.measure.regionprops(seg_stack[i], reporter_stack[i]))\n",
-    "    return results"
+    "\n",
+    "def _regionprops(label_image, intensity_image, properties=DEFAULT_REGIONPROPS):\n",
+    "    rps = skimage.measure.regionprops(\n",
+    "        label_image, intensity_image, coordinates=\"rc\", cache=False\n",
+    "    )\n",
+    "    df = pd.concat(\n",
+    "        {\n",
+    "            cell: pd.Series({prop: getattr(rp, prop) for prop in properties})\n",
+    "            for cell, rp in enumerate(rps)\n",
+    "        },\n",
+    "        axis=1,\n",
+    "    ).T\n",
+    "    df.index.name = \"cell\"\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def compute_regionprops(label_stack, intensity_stack):\n",
+    "    results = {}\n",
+    "    for i in range(label_stack.shape[0]):\n",
+    "        results[i] = _regionprops(label_stack[i], intensity_stack[i])\n",
+    "    df = pd.concat(results)\n",
+    "    df.index.set_names(\"t\", level=0, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def map_stack(col_to_funcs, image_stack):\n",
+    "    ts = range(image_stack.shape[0])\n",
+    "    columns, funcs = util.unzip_items(col_to_funcs.items())\n",
+    "    func = juxt(*funcs)\n",
+    "    res = [func(image_stack[t]) for t in ts]\n",
+    "    d = {}\n",
+    "    for col, values in zip(columns, zip(*res)):\n",
+    "        if not isinstance(col, str):\n",
+    "            for i, sub_col in enumerate(col):\n",
+    "                d[sub_col] = [v[i] for v in values]\n",
+    "        else:\n",
+    "            d[col] = values\n",
+    "    df = pd.DataFrame(d, index=ts)\n",
+    "    df.index.name = \"t\"\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def map_stack_over_labels(col_to_funcs, label_stack, intensity_stack, labels=None):\n",
+    "    dfs = {\n",
+    "        t: map_frame_over_labels(\n",
+    "            col_to_funcs, label_stack[t], intensity_stack[t], labels=labels\n",
+    "        )\n",
+    "        for t in range(label_stack.shape[0])\n",
+    "    }\n",
+    "    df = pd.concat(dfs)\n",
+    "    df.index.set_names(\"t\", level=0, inplace=True)\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# TODO\n",
+    "# slightly faster alternative to, e.g.,\n",
+    "# pd.DataFrame({'label': label_image.ravel(), 'value': intensity_image.ravel()}).groupby('label').agg(['mean', 'min', 'max'])\n",
+    "# OR numpy_indexed.group_by(l0.ravel(), i0.ravel(), reduction=np.mean)\n",
+    "def map_frame_over_labels(col_to_funcs, label_image, intensity_image, labels=None):\n",
+    "    if labels is None:\n",
+    "        labels = range(0, np.max(np.asarray(label_image)) + 1)\n",
+    "    columns, funcs = util.unzip_items(col_to_funcs.items())\n",
+    "    func = juxt(*funcs)\n",
+    "    res = [func(intensity_image[label_image == label]) for label in labels]\n",
+    "    d = {}\n",
+    "    for col, values in zip(columns, zip(*res)):\n",
+    "        if not isinstance(col, str):\n",
+    "            for i, sub_col in enumerate(col):\n",
+    "                d[sub_col] = [v[i] for v in values]\n",
+    "        else:\n",
+    "            d[col] = values\n",
+    "    df = pd.DataFrame(d, index=labels)\n",
+    "    df.index.name = \"label\"\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "# PERCENTILE\n",
+    "# FOCUS\n",
+    "# TRENCHWISE PERCENTILE\n",
+    "# ALLOW ERODING MASK BEFORE PROCESSING (say, only erode for percentile)\n",
+    "# DASK to run all three off the same trench sets, canceling after done\n",
+    "# quick-and-dirty ASYNC(?)\n",
+    "# easy way to test dask submit loops locally??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit map_stack({'focus': image.sharpness, ('p0.1','p0.5','p0.9'): partial(np.percentile, q=(0.1,0.5,0.9))}, _frame_stacks[_key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funcs = {\n",
+    "    \"mean\": np.mean,\n",
+    "    \"min\": np.min,\n",
+    "    \"max\": np.max,\n",
+    "    (\"p0.1\", \"p0.5\", \"p0.9\"): partial(np.percentile, q=(0.1, 0.5, 0.9)),\n",
+    "}\n",
+    "a = map_stack_over_labels(funcs, _seg_masks[_key], _frame_stacks[_key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.loc[IDX[:, 1:], :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_frame_over_labels(\n",
+    "    {\n",
+    "        \"mean\": np.mean,\n",
+    "        \"min\": np.min,\n",
+    "        \"max\": np.max,\n",
+    "        (\"p0.1\", \"p0.5\", \"p0.9\"): partial(np.percentile, q=(0.1, 0.5, 0.9)),\n",
+    "    },\n",
+    "    _seg_masks[_key],\n",
+    "    _frame_stacks[_key],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_frame_over_labels(\n",
+    "    {\n",
+    "        \"mean\": np.mean,\n",
+    "        \"min\": np.min,\n",
+    "        \"max\": np.max,\n",
+    "        (\"p0.1\", \"p0.5\", \"p0.9\"): partial(np.percentile, q=(0.1, 0.5, 0.9)),\n",
+    "    },\n",
+    "    l0,\n",
+    "    i0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit map_frame_over_labels({'mean': np.mean, 'min': np.min, 'max': np.max, ('p0.1','p0.5','p0.9'): partial(np.percentile, q=(0.1,0.5,0.9))}, l0, i0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit map_frame_over_labels({'mean': np.mean, 'min': np.min, 'max': np.max}, l0, i0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit pd.DataFrame({'label': l0.ravel(), 'value': i0.ravel()}).groupby('label').agg(['mean', 'min', 'max'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame({\"label\": l0.ravel(), \"value\": i0.ravel()}).groupby(\"label\").agg(\n",
+    "    [\"mean\", \"min\", \"max\", partial(np.percentile, q=(0.1, 0.5, 0.9))]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l0 = _seg_masks[_key][0]\n",
+    "i0 = _frame_stacks[_key][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "for l in range(l0.max()):\n",
+    "    i0[l0 == l].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%timeit numpy_indexed.group_by(l0.ravel(), i0.ravel(), reduction=np.mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_rps = compute_regionprops(\n",
+    "    _seg_masks[_key], _frame_stacks[_key]\n",
+    ")  # , _frame_stacks[_key._replace(channel='YFP')])\n",
+    "_rps.head()"
    ]
   },
   {
@@ -1127,15 +1395,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = _rps[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from trench_segmentation.watershed import _trench_img"
    ]
   },
@@ -1145,34 +1404,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%opts Layout [normalize=False]\n",
-    "(\n",
-    "    hv.HoloMap({t: _trench_img(img) for t, img in enumerate(util.get_one(_seg_masks))})\n",
-    "    + hv.HoloMap(\n",
-    "        {t: _trench_img(img) for t, img in enumerate(util.get_one(_frame_stacks))}\n",
-    "    )\n",
-    "    + hv.HoloMap({t: diag[\"img_k1_frangi\"] for t, diag in enumerate(seg_diags)})\n",
-    ").cols(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%%time\n",
     "segment_trench_diag = diagnostics.wrap_diagnostics_stack(\n",
     "    trench_segmentation.watershed.segment_trench\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
+    ")\n",
     "segs, seg_diags, seg_errs = segment_trench_diag(util.get_one(_frame_stacks))"
    ]
   },
@@ -1183,6 +1418,52 @@
    "outputs": [],
    "source": [
     "ui.show_plot_stack(seg_diags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = seg_diags[31][\"img_k1_frangi\"].data\n",
+    "b = seg_diags[31][\"img\"].data\n",
+    "c = seg_diags[31][\"img_k1\"].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(c)\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(skimage.filters.rank.gradient(c, skimage.morphology.disk(1.5)))\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(skimage.filters.rank.percentile(c, skimage.morphology.disk(3), p0=0.7))\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(\n",
+    "    skimage.filters.rank.mean_bilateral(c, skimage.morphology.disk(3), s0=5, s1=10)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(a)\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "# plt.imshow(skimage.filters.rank.gradient(a, skimage.morphology.disk(5)))\n",
+    "plt.imshow(b)\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(skimage.filters.rank.median(b, skimage.morphology.disk(2)))\n",
+    "plt.figure(figsize=(12, 12))\n",
+    "plt.imshow(skimage.filters.gaussian(a, 1.5))"
    ]
   },
   {
