WIP full analysis pipeline. Also fixed trench bbox endpoints being inclusive. Have not tested this!

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180722 Trench segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180722 Trench segmentation.ipynb
@@ -22,6 +22,7 @@
     "from distributed import Client, LocalCluster, progress\n",
     "from dask_jobqueue import SLURMCluster\n",
     "import streamz\n",
+    "import streamz.dataframe as sdf\n",
     "import holoviews as hv\n",
     "from holoviews.streams import Stream, param\n",
     "from holoviews.operation.datashader import regrid\n",
@@ -635,12 +636,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_trenches_segmarker = trench_bboxes[\n",
+    "selected_trenches_segmentation = trench_bboxes[\n",
     "    trench_bboxes[(\"info\", \"hough_value\")] > 90\n",
     "].loc[IDX[:, :3, [\"MCHERRY\"], 0, :, :], :]\n",
-    "selected_trenches_index = next(iter(selected_trenches_segmarker.groupby(\"t\")))[\n",
-    "    1\n",
-    "].index.droplevel(\"t\")\n",
+    "# selected_trenches_index = next(iter(selected_trenches_segmarker.groupby('t')))[1].index.droplevel('t')\n",
     "# selected_trenches_reporter = selected_trenches_segmarker.rename(index={'MCHERRY': 'YFP'}, level='channel', copy=False)\n",
     "# selected_trenches_all = pd.concat([selected_trenches_segmarker, selected_trenches_reporter]).sort_index()"
    ]
@@ -661,6 +660,15 @@
    "outputs": [],
    "source": [
     "selected_trenches_segmarker.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpt_stream = streamz.Stream()"
    ]
   },
   {
@@ -709,30 +717,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame_stacks_futures = {}\n",
-    "# for frame_idx, trenches in take(2, util.iter_index(selected_trenches_all.groupby(['filename', 'position']))):\n",
-    "for frame_idx, trenches in take(\n",
-    "    2,\n",
-    "    util.iter_index(\n",
-    "        selected_trenches_index.to_series().groupby([\"filename\", \"position\"])\n",
-    "    ),\n",
-    "):\n",
-    "    # display(selected_trenches_all.xs((frame_idx.filename,frame_idx.position), drop_level=False).tail())\n",
-    "    frame_stacks = workflow.get_trench_stacks(trenches, all_frames_future, image_limits)\n",
-    "    workflow.map_trenchwise(do_segment_trench, frame_stacks, trenches)\n",
-    "    funcs = {\n",
-    "        \"mean\": np.mean,\n",
-    "        \"min\": np.min,\n",
-    "        \"max\": np.max,\n",
-    "        (\"p0.1\", \"p0.5\", \"p0.9\"): partial(np.percentile, q=(0.1, 0.5, 0.9)),\n",
-    "    }\n",
-    "    a = map_stack_over_labels(funcs, _seg_masks[_key], _frame_stacks[_key])\n",
-    "    map_trenchwise(compute_regionprops, frame_stacks, trenches, channels=[\"YFP\"])\n",
-    "    # print(trenches.head())\n",
-    "    # frame_stacks_futures[frame_idx] = client.submit(workflow.get_trench_stacks, trenches, all_frames_future, image_limits)\n",
-    "    # frame_segs_futures[frame_idx] = client.submit(partial(workflow.map_trenchwise, do_segment_trench), frame_stacks_futures[frame_idx], trenches)\n",
-    "    # frame_regionprops_futures[frame_idx] = client.submit(partial(map_trenchwise, compute_regionprops, channels=['YFP']),\n",
-    "    #                                                     frame_stacks_futures[frame_idx], trenches)"
+    "a = all_frames_t.get_group(\n",
+    "    (\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\", 0)\n",
+    ").groupby(\"t\")"
    ]
   },
   {
@@ -741,21 +728,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame_segs_futures = {}\n",
-    "frame_regionprops_futures = {}\n",
-    "for frame_idx, trenches in util.iter_index(\n",
-    "    selected_trenches_index.to_series().groupby([\"filename\", \"position\"])\n",
+    "a.groups.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_frames_t.groups[(\"/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2\", 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labelwise_funcs = {\n",
+    "    \"mean\": np.mean,\n",
+    "    \"min\": np.min,\n",
+    "    \"max\": np.max,\n",
+    "    (\"p0.1\", \"p0.3\", \"p0.5\", \"p0.7\", \"p0.9\"): partial(\n",
+    "        np.percentile, q=(0.1, 0.3, 0.5, 0.7, 0.9)\n",
+    "    ),\n",
+    "}\n",
+    "trenchwise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
+    "framewise_funcs = {\"sharpness\": image.sharpness, **labelwise_funcs}\n",
+    "\n",
+    "segmentation_channel = \"MCHERRY\"\n",
+    "reporter_channels = [\"MCHERRY\", \"YFP\"]\n",
+    "all_frames_t = all_frames.groupby([\"filename\", \"position\"])\n",
+    "# for frame_idx, trenches in take(2, util.iter_index(selected_trenches_all.groupby(['filename', 'position']))):\n",
+    "# for frame_idx, trenches in take(2, util.iter_index(selected_trenches_index.to_series().groupby(['filename', 'position']))):\n",
+    "position_trenchwise_dfs = {}\n",
+    "position_labelwise_dfs = {}\n",
+    "for frame_idx, trenches in take(\n",
+    "    2, util.iter_index(selected_trenches_segmentation.groupby([\"filename\", \"position\"]))\n",
     "):\n",
-    "    frame_segs_futures[frame_idx] = client.submit(\n",
-    "        partial(workflow.map_trenchwise, do_segment_trench),\n",
-    "        frame_stacks_futures[frame_idx],\n",
-    "        trenches,\n",
-    "    )\n",
-    "    frame_regionprops_futures[frame_idx] = client.submit(\n",
-    "        partial(map_trenchwise, compute_regionprops, channels=[\"YFP\"]),\n",
-    "        frame_stacks_futures[frame_idx],\n",
-    "        trenches,\n",
-    "    )"
+    "    # display(trenches)\n",
+    "    uls = trenches[\"upper_left\"].values\n",
+    "    lrs = trenches[\"lower_right\"].values\n",
+    "    trench_idxs = trenches.index.get_level_values(\"trench\")\n",
+    "    # get timepoints/channels for this position\n",
+    "    fp_frames = all_frames_t.get_group((frame_idx.filename, frame_idx.position))\n",
+    "    position_t_trenchwise_dfs = {}\n",
+    "    position_t_labelwise_dfs = {}\n",
+    "    for t, frames in take(2, fp_frames.groupby(\"t\")):\n",
+    "        # TODO: make sure frames contains MCHERRY, YFP\n",
+    "        channels = {segmentation_channel, *reporter_channels}\n",
+    "        images = {\n",
+    "            channel: workflow.get_nd2_frame(channel=channel, t=t, **frame_idx._asdict())\n",
+    "            for channel in channels\n",
+    "        }\n",
+    "        trench_trenchwise_dfs = {}\n",
+    "        trench_labelwise_dfs = {}\n",
+    "        for trench_idx in take(2, trench_idxs):\n",
+    "            ul = uls[trench_idx]\n",
+    "            lr = lrs[trench_idx]\n",
+    "            trench_images = {\n",
+    "                channel: images[channel][ul[1] : lr[1] + 1, ul[0] : lr[0] + 1]\n",
+    "                for channel in channels\n",
+    "            }\n",
+    "            trench_trenchwise_df = pd.concat(\n",
+    "                {\n",
+    "                    channel: workflow.map_frame(trenchwise_funcs, images[channel])\n",
+    "                    for channel in reporter_channels\n",
+    "                },\n",
+    "                axis=0,\n",
+    "            )\n",
+    "            trench_trenchwise_dfs[trench_idx] = trench_trenchwise_df\n",
+    "            label_trench_image = trench_segmentation.watershed.segment_trench(\n",
+    "                trench_images[segmentation_channel]\n",
+    "            )\n",
+    "            trench_labelwise_df = pd.concat(\n",
+    "                {\n",
+    "                    channel: pd.concat(\n",
+    "                        {\n",
+    "                            \"labelwise\": workflow.map_frame_over_labels(\n",
+    "                                funcs, label_trench_image, trench_images[channel]\n",
+    "                            ),\n",
+    "                            \"regionprops\": image.regionprops(\n",
+    "                                label_trench_image, trench_images[channel]\n",
+    "                            ),\n",
+    "                        },\n",
+    "                        axis=1,\n",
+    "                    )\n",
+    "                    for channel in reporter_channels\n",
+    "                },\n",
+    "                axis=1,\n",
+    "            )\n",
+    "            trench_labelwise_dfs[trench_idx] = trench_labelwise_df\n",
+    "        position_t_trenchwise_df = pd.concat(trench_trenchwise_dfs, axis=1).T\n",
+    "        position_t_trenchwise_df.index.name = \"trench\"\n",
+    "        position_t_trenchwise_dfs[t] = position_t_trenchwise_df\n",
+    "        position_t_labelwise_df = pd.concat(trench_labelwise_dfs, axis=0)\n",
+    "        position_t_labelwise_df.index.set_names(\"trench\", level=0, inplace=True)\n",
+    "        position_t_labelwise_dfs[t] = position_t_labelwise_df\n",
+    "    position_trenchwise_df = pd.concat(position_t_trenchwise_dfs, axis=0)\n",
+    "    position_trenchwise_df.index.set_names(\"t\", level=0, inplace=True)\n",
+    "    position_trenchwise_dfs[tuple(frame_idx)] = position_trenchwise_df\n",
+    "    position_labelwise_df = pd.concat(position_t_labelwise_dfs, axis=0)\n",
+    "    position_labelwise_df.index.set_names(\"t\", level=0, inplace=True)\n",
+    "    position_labelwise_dfs[tuple(frame_idx)] = position_labelwise_df\n",
+    "trenchwise_df = pd.concat(position_trenchwise_dfs, axis=0)\n",
+    "trenchwise_df.index.names = [\"filename\", \"position\", *trenchwise_df.index.names[2:]]\n",
+    "labelwise_df = pd.concat(position_labelwise_dfs, axis=0)\n",
+    "labelwise_df.index.names = [\"filename\", \"position\", *labelwise_df.index.names[2:]]\n",
+    "display(trenchwise_df)\n",
+    "display(labelwise_df)"
    ]
   },
   {
@@ -994,6 +1076,15 @@
    "outputs": [],
    "source": [
     "%timeit map_stack({'focus': image.sharpness, ('p0.1','p0.5','p0.9'): partial(np.percentile, q=(0.1,0.5,0.9))}, _frame_stacks[_key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_frame_stacks[_key]"
    ]
   },
   {
